basic styling, fix for flex not wrapping - #0088

--- a/calculator/calcstyle.css
+++ b/calculator/calcstyle.css
@@ -13,6 +13,7 @@ main {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
   width: 100vw;
   height: auto;
 }
@@ -66,7 +67,6 @@ header {
   margin: 1rem;
   border: 0.1rem solid;
   border-radius: 5rem;
-  background: none;
   color: inherit;
   /* why */
   width: 8vw;
@@ -74,15 +74,32 @@ header {
   font: inherit;
   cursor: pointer;
   outline: inherit;
-  font-size: 10rem;
+  font-size: 5vw;
 }
 
-.numerical-button:hover,
+.non-numerical-button {
+  background: rgb(159, 197, 243);
+}
+
 .non-numerical-button:hover {
+  background: rgb(130, 183, 249);
+}
+
+.non-numerical-button:active {
+  background: rgb(0, 95, 211);
+}
+
+.numerical-button:hover {
   background: darkgrey;
 }
 
-.numerical-button:active,
-.non-numerical-button:active {
+.numerical-button:active {
   background: grey;
+}
+
+@media screen and (max-height: 900px) {
+  .numerical-button,
+  .non-numerical-button {
+    height: 8vh;
+  }
 }
